# Gatherraa

./: .gitignore  CONTRACT_SIZE_OPTIMIZATION.md  GAS_USAGE_TESTING_IMPLEMENTATION.md  PAYMENT_IMPLEMENTATION_SUMMARY.md  PAYMENT_SETUP_GUIDE.md  RATE_LIMITING_IMPLEMENTATION.md  README.md  SECURITY_TEST_IMPLEMENTATION_SUMMARY.md  UNSAFE_CODE_ANALYSIS.md  bash.exe.stackdump  ci-cd.yaml  package.json  run-test.sh
.github/workflows/: integration-tests.yml
app/backend/: .env.example  .env.payments.example  NOTIFICATIONS_README.md  NOTIFICATION_IMPLEMENTATION_SUMMARY.md  NOTIFICATION_INTEGRATION_EXAMPLES.md  NOTIFICATION_SETUP_GUIDE.md  eslint.config.mjs  package.json
app/backend/src/: app.module.ts  main.ts
app/backend/test/: notifications.integration.spec.ts  payments.integration.spec.ts
app/frontend/: package.json
app/frontend/.storybook/: main.ts  preview.ts
app/frontend/app/: globals.css  layout.tsx  page.tsx
app/frontend/components/: DataTable.tsx  EventCreationWizard.jsx  NetworkGuard.tsx  RegisterButton.tsx  ReusableTable.test.tsx  ReusableTable.tsx
app/frontend/config/: route-guard.config.ts
contract/: CI_ISSUES_RESOLVED.md  Cargo.toml  DEPENDENCY_ANALYSIS.md  MODULE_ORGANIZATION_COMPLETE.md  NAMING_STANDARDS.md  README.md  README_NEW.md  SECURITY_TEST_GUIDE.md  TEST_COVERAGE_REPORT.md  edge_case_tests.rs  integration_tests.rs  run_security_tests.sh  validate_organization.ps1  validate_organization.sh
contract/.cargo/: config.toml
contract/common/: Cargo.toml
contract/common/src/: access.rs  error.rs  errors.rs  gas_testing.rs  lib.rs  reentrancy.rs  storage.rs  types.rs  upgrade.rs  utils.rs  validation.rs
contract/contracts/: Cargo.toml
contract/contracts/src/: contract.rs  error.rs  lib.rs  storage.rs  test.rs  types.rs
contract/core/: README.md
contract/core/access_control/src/: lib.rs  storage_types.rs
contract/core/storage/: Cargo.toml  README.md
contract/core/storage/src/: lib.rs  storage_types.rs
contract/core/upgrade/: Cargo.toml  README.md
contract/core/upgrade/src/: lib.rs  storage_types.rs
contract/cross_contract_contract/src/: lib.rs  storage_types.rs
contract/dutch_auction_contract/: Cargo.toml
contract/dutch_auction_contract/src/: lib.rs  storage_types.rs
contract/escrow_contract/: Cargo.toml
contract/escrow_contract/src/: lib.rs  security_tests.rs  storage_types.rs  test_gas.rs
contract/event_factory_contract/: Cargo.toml
contract/event_factory_contract/src/: lib.rs  storage_types.rs  test.rs
contract/events/event_factory/: lib.rs
contract/events/event_factory/event_factory_contract/: Cargo.toml  storage_types.rs  test.rs
contract/events/subscription/: lib.rs  subscription.rs  test.rs
contract/events/subscription/subscription_contract/: Cargo.toml  storage_types.rs  utils.rs
contract/events/ticket/: Cargo.toml  lib.rs  oracle.rs  pricing_engine.rs  proxy.rs  storage_types.rs  vrf.rs
contract/events/ticket/ticket_contract/: Cargo.toml  allocation.rs  commitment.rs
contract/feature_flag_contract/: Cargo.toml
contract/feature_flag_contract/src/: lib.rs  storage_types.rs
contract/financial/auction/: lib.rs  storage_types.rs
contract/financial/auction/dutch_auction_contract/: Cargo.toml  test.rs
contract/financial/escrow/: Cargo.toml  proxy.rs  storage_types.rs
contract/financial/escrow/escrow_contract/: Cargo.toml  lib.rs  test.rs  upgrade_manager.rs
contract/financial/multisig/: lib.rs  storage_types.rs  test.rs
contract/financial/multisig/multisig_wallet_contract/: Cargo.toml
contract/governance/feature_flags/: test.rs
contract/governance/feature_flags/feature_flag_contract/: Cargo.toml  lib.rs  storage_types.rs
contract/governance/governance/: lib.rs
contract/governance/governance/governance_contract/: Cargo.toml  storage.rs
contract/governance_contract/: check_output.txt
contract/governance_contract/src/: lib.rs  test.rs
contract/identity/identity/: lib.rs  storage_types.rs
contract/identity/identity/identity_contract/: Cargo.toml  test.rs
contract/identity/whitelist/: merkle.rs
contract/identity/whitelist/whitelist_contract/: Cargo.toml  lib.rs
contract/identity/zk_ticket/zk_ticket_contract/: Cargo.toml  lib.rs  storage_types.rs  test.rs
contract/identity_contract/: Cargo.toml  README.md  USAGE.md  deploy.sh
contract/identity_contract/src/: lib.rs  storage_types.rs
contract/iteration_optimization_contract/: Cargo.toml
contract/iteration_optimization_contract/src/: lib.rs
contract/multisig_wallet_contract/: Cargo.toml
contract/multisig_wallet_contract/src/: lib.rs  security_tests.rs  storage_types.rs
contract/storage_initialization_contract/src/: lib.rs
contract/storage_optimization_contract/: Cargo.toml
contract/storage_optimization_contract/src/: lib.rs  storage_types.rs  test.rs
contract/subscription_contract/src/: lib.rs
contract/test/: Cargo.toml
contract/test/src/: gas_benchmarks.rs  gas_limits.rs  gas_regression.rs  lib.rs
contract/ticket_contract/: Cargo.toml
contract/ticket_contract/src/: allocation_engine.rs  commitment.rs  core.rs  entropy.rs  lib.rs  oracle.rs  security_tests.rs  storage_types.rs  test.rs  test_gas.rs  upgrade_manager.rs
contract/utilities/cross_contract/: lib.rs  test.rs
contract/utilities/cross_contract/cross_contract_contract/: Cargo.toml
contract/utilities/optimization/: storage_types.rs  test.rs
contract/utilities/optimization/storage_optimization_contract/: Cargo.toml  lib.rs
contract/utilities/vrf/: storage_types.rs
contract/utilities/vrf/vrf_contract/: Cargo.toml  lib.rs  test.rs
contract/vrf_contract/: Cargo.toml
contract/vrf_contract/src/: lib.rs  storage_types.rs  test.rs
contract/whitelist_contract/: Cargo.toml
contract/whitelist_contract/src/: error.rs  lib.rs  merkle.rs  storage.rs  test.rs
contract/zk_ticket_contract/src/: lib.rs  storage_types.rs
docs/: PAYMENT_IMPLEMENTATION.md  REPOSITORY_CLEANUP_GUIDE.md  REVIEWS_API.md  VRF_IMPLEMENTATION_GUIDE.md  VRF_LOTTERY_SYSTEM.md  WHITELIST_SYSTEM.md
tests/integration/: package.json  tsconfig.json
(+258 files in other folders)
