[workspace]
resolver = "2"
members = [
    "common",
    "core/access_control",
    "core/storage", 
    "core/upgrade",
    "financial/escrow/escrow_contract",
    "financial/auction/dutch_auction_contract",
    "financial/staking/contracts",
    "financial/multisig/multisig_wallet_contract",
    "identity/identity/identity_contract",
    "identity/zk_ticket/zk_ticket_contract",
    "identity/whitelist/whitelist_contract",
    "governance/governance/governance_contract",
    "governance/feature_flags/feature_flag_contract",
    "events/ticket/ticket_contract",
    "events/subscription/subscription_contract",
    "events/event_factory/event_factory_contract",
    "utilities/vrf/vrf_contract",
    "utilities/cross_contract/cross_contract_contract",
    "utilities/optimization/storage_optimization_contract",
    "utilities/optimization/iteration_optimization_contract",
    "utilities/optimization/storage_initialization_contract/storage_initialization_contract",
]

[[bin]]
name = "integration-tests"
path = "integration_tests.rs"

[[bin]]
name = "edge-case-tests"
path = "edge_case_tests.rs"

# Workspace-level Clippy lint configuration
[workspace.lints.clippy]
# Deny common lint groups
all = "deny"
pedantic = "deny"
nursery = "warn"
# Allowed lints that are too noisy for this codebase
module_name_repetitions = "allow"
too_many_arguments = "allow"
cast_possible_truncation = "allow"

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1
