[workspace]
resolver = "2"
members = [
    "common",
    "core/access_control",
    "core/storage", 
    "core/upgrade",
    "financial/escrow",
    "financial/auction",
    "financial/staking/contracts",
    "financial/multisig",
    "identity/identity",
    "identity/zk_ticket",
    "identity/whitelist",
    "governance/governance",
    "governance/feature_flags",
    "events/ticket",
    "events/subscription",
    "events/event_factory",
    "utilities/vrf",
    "utilities/cross_contract",
    "utilities/optimization",
]

[[bin]]
name = "integration-tests"
path = "integration_tests.rs"

[[bin]]
name = "edge-case-tests"
path = "edge_case_tests.rs"

# Workspace-level Clippy lint configuration
[workspace.lints.clippy]
# Deny common lint groups
all = "deny"
pedantic = "deny"
nursery = "warn"
# Allowed lints that are too noisy for this codebase
module_name_repetitions = "allow"
too_many_arguments = "allow"
cast_possible_truncation = "allow"

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1
