[package]
name = "gathera-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "23.5.2"
gathera-common = { path = "../common" }

[dev-dependencies]
soroban-sdk = { version = "23.5.2", features = ["testutils"] }

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1
