[package]
name = "gathera-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "23.5.2"
gathera-common = { path = "../common" }
ticket_contract = { path = "../ticket_contract" }
escrow_contract = { path = "../escrow_contract" }

[dev-dependencies]
soroban-sdk = { version = "23.5.2", features = ["testutils"] }

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1
