[package]
name = "gathera-events-ticket"
version = "0.1.0"
edition = "2021"
description = "Event ticketing contracts for Gatheraa platform"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "23.5.2"
stellar-access = "0.6.0"
stellar-macros = "0.6.0"
stellar-tokens = "0.6.0"
gathera-common = { path = "../../../common" }

[dev-dependencies]
soroban-sdk = { version = "23.5.2", features = ["testutils"] }

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1
